# clap-juce-extensions

./: .gitignore  BuildingFromProjucer.md  CMakeLists.txt  README.md
.github/workflows/: build-cmake.yml  build-projucer.yml  build_cmake.yml
cmake/: ClapTargetHelpers.cmake  JucerClap.cmake
cmake/macos_bundle/: CLAP_Info.plist.in  make-icns.sh
docs/: HowToParameterModulation.md
examples/: CMakeLists.txt
examples/GainPlugin/: CMakeLists.txt  GainPlugin.cpp  GainPlugin.h  GainPlugin.jucer  ModulatableFloatParameter.h  ParamIndicationHelper.h  PluginEditor.cpp  PluginEditor.h  reaper_plugin.h
examples/HostSpecificExtensionsPlugin/: CMakeLists.txt  HostSpecificExtensionsPlugin.cpp  HostSpecificExtensionsPlugin.h  PluginEditor.cpp  PluginEditor.h
examples/NoteNamesPlugin/: CMakeLists.txt  NoteNamesPlugin.cpp  NoteNamesPlugin.h
examples/cmake/: CPM.cmake
include/clap-juce-extensions/: clap-juce-extensions.h
src/: clap_juce_wrapper.cpp
src/extensions/: clap-juce-extensions.cpp
src/wrapper/: clap-juce-mac.mm  clap-juce-wrapper.cpp
